# Dashboard-App

./: .gitignore  LICENSE  README.md  app.py  emailer.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app1/: __init__.py  models.py  routes.py  routes1.py  routes2.py  routes3.py
app1/templates/: home.html  incomplete_tasks.html  index.html  layout.html  noteview.html  todo_index.html
core/: __init__.py  constants.py  datetime_1.py  feed_reader.py  models.py  routes.py  routes1.py  routes2.py  routes3.py
core/ai/: gemini_handler.py
core/news/: feed_reader.py  feeds.json
core/routes/: routes.py  routes2.py  routes3.py  todo_routes.py
core/static/: input.css  output.css  styles.css  styles2.css
core/static/styles/news/: styles.css
core/templates/: datetime_1.html  edit_note.html  feed_results.html  feed_show.html  home.html  index.html  layout.html  noteindex.html  notes_list.html  todo_body.html  todo_index.html  todo_update.html
core/todo/: __init__.py  todo.py
doc/: db.md
migrations/versions/: 1206fc6b61ec_added_categories_and_priorities.py  3df70ffc8d95_initial.py
