[project]
name = "dashboard-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.5",
    "blinker==1.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "feedparser==6.0.12",
    "flask==3.1.2",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.4",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "openpyxl==3.1.5",
    "sgmllib3k==1.0.0",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]
